--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-pandas>=2.0
-numpy<2
-scikit-learn>=1.4,<1.6
-openpyxl
+streamlit==1.37.1
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.5.1
+openpyxl==3.1.5
